<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="br.com.jluiz20.income.presentation.main.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tv_current_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="0.00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/savings_per_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0.00"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_monthly_savings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_value" />

        <SeekBar
            android:id="@+id/sb_desired_monthly_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="20"
            app:layout_constraintEnd_toStartOf="@+id/tv_desired_monthly_income_max"
            app:layout_constraintStart_toEndOf="@+id/tv_desired_monthly_income_min"
            app:layout_constraintTop_toBottomOf="@+id/tv_desired_monthly_income" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_desired_monthly_earnings"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tv_desired_monthly_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0.00"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/tv_desired_monthly_income_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="1.000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/sb_desired_monthly_income"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sb_desired_monthly_income" />

        <EditText
            android:id="@+id/tv_desired_monthly_income_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-light"
            android:text="10.000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/sb_desired_monthly_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sb_desired_monthly_income" />


        <SeekBar
            android:id="@+id/sb_number_of_periods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="20"
            app:layout_constraintEnd_toStartOf="@+id/tv_number_of_periods_max"
            app:layout_constraintStart_toEndOf="@+id/tv_number_of_periods_min"
            app:layout_constraintTop_toBottomOf="@+id/tv_number_of_periods" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_number_of_periods"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_desired_monthly_income" />

        <EditText
            android:id="@+id/tv_number_of_periods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0.00"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/tv_number_of_periods_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/sb_number_of_periods"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sb_number_of_periods" />

        <EditText
            android:id="@+id/tv_number_of_periods_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-light"
            android:text="600"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/sb_number_of_periods"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sb_number_of_periods" />


        <SeekBar
            android:id="@+id/sb_rate_per_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="20"
            app:layout_constraintEnd_toStartOf="@+id/tv_rate_per_period_max"
            app:layout_constraintStart_toEndOf="@+id/tv_rate_per_period_min"
            app:layout_constraintTop_toBottomOf="@+id/tv_rate_per_period" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_rate"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_number_of_periods" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_initial_value"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_rate_per_period" />

        <EditText
            android:id="@+id/tv_rate_per_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0.00"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/tv_rate_per_period_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="0.1%"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/sb_rate_per_period"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sb_rate_per_period" />

        <EditText
            android:id="@+id/tv_rate_per_period_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-light"
            android:text="30.00%"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/sb_rate_per_period"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sb_rate_per_period" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_currency"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/sb_desired_monthly_income"
            app:layout_constraintEnd_toStartOf="@+id/tv_desired_monthly_income"
            app:layout_constraintTop_toTopOf="@+id/tv_desired_monthly_income" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_percentage"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rate_per_period"
            app:layout_constraintStart_toEndOf="@+id/tv_rate_per_period"
            app:layout_constraintTop_toTopOf="@+id/tv_rate_per_period" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_period"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_number_of_periods"
            app:layout_constraintStart_toEndOf="@+id/tv_number_of_periods"
            app:layout_constraintTop_toTopOf="@+id/tv_number_of_periods" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_currency"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_current_value"
            app:layout_constraintEnd_toStartOf="@+id/tv_current_value"
            app:layout_constraintTop_toTopOf="@+id/tv_current_value" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_currency"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/savings_per_period"
            app:layout_constraintEnd_toStartOf="@+id/savings_per_period"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_period_result"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/savings_per_period"
            app:layout_constraintStart_toEndOf="@+id/savings_per_period"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
